--- a/ENT App/Index.html
+++ b/ENT App/Index.html
@@ -15,7 +15,7 @@ function closeForm() {
 <body>
 <div class="content">
 <header>
-<img src="images.jpg" alt="Logo">
+<img src="images.png" alt="Logo">
 
 </header>
 <div class="tab">
